--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.2",
     "google-map-react": "^2.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
