--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.1",
     "@react-google-maps/api": "^2.12.2",
     "google-map-react": "^2.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-paypal-button-v3": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
