--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-paypal-button-v3": "^3.0.2"
+    "react-paypal-button-v3": "^3.0.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
